# LogiX

./: .gitignore  LICENSE  README _2.md  README.md  database.py  demo.db  gui.py  logix.db  main.py  mydemo.db  pyproject.toml  requirements.txt  sqlite-database.py  trial.py  trial2.py
src/: database.py  gui.py
